# tfserving-alb-example

./: .gitignore  .pre-commit-config.yaml  README.md
client/: infer.py  loadtest.py  mscoco_label_map.json  pyproject.toml  setup.cfg
server/cpu/: Dockerfile
server/cpu/ecs/: service-with-alb.json.example  service-without-alb.json.example  task.json.example
server/cpu/elbv2/: load-balancer.json.example
